[package]
name = "put_ip_to_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
aws-smithy-http = "*"
bytestream = "0.4"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
pnet = "*"